# todo

./: .clang_complete  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  pre-commit.sh  snapcraft.yaml
.githooks/: pre-commit
.github/workflows/: codacy.yml  dependent-issues.yml
cmake/: date.cmake  date.cmake.in  googletest.cmake  googletest.cmake.in  safeint.cmake  safeint.cmake.in
doxydoc/html/: annotated.html  classes.html  dir_000000_000001.html  dir_000001_000002.html  dir_000001_000004.html  dir_000002_000004.html  dir_51e5b56c5a94789e05e3a3352a90e377.html  dir_51e5b56c5a94789e05e3a3352a90e377_dep.map  dir_51e5b56c5a94789e05e3a3352a90e377_dep.md5  dir_63a79716ac36ae14e4cbc21f08c9941e.html  dir_63a79716ac36ae14e4cbc21f08c9941e_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_7b46c1221ca7d8983df05fc1cfa312fe.html  dir_b7878ad5ecbf2506f4125b9d34c97e45.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  inherits.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespaces.html
doxydoc/html/d0/d06/: classutil_1_1Input.html  classutil_1_1Input_acc261b50d78db951ab280848406266d1_icgraph.map  classutil_1_1Input_acc261b50d78db951ab280848406266d1_icgraph.md5
doxydoc/html/d0/d07/: action__abstract_8hpp__dep__incl.map  action__abstract_8hpp__dep__incl.md5
doxydoc/html/d0/db3/: todo__abstract_8hpp__dep__incl.map  todo__abstract_8hpp__dep__incl.md5
doxydoc/html/d0/dd8/: classTodoFiles-members.html
doxydoc/html/d0/de9/: input_8cpp__incl.map  input_8cpp__incl.md5
doxydoc/html/d0/dfe/: low_8hpp__incl.map  low_8hpp__incl.md5
doxydoc/html/d0/dff/: help_8cpp.html
doxydoc/html/d1/d09/: input_8hpp__incl.map  input_8hpp__incl.md5
doxydoc/html/d1/d32/: classutil_1_1Input__coll__graph.map  classutil_1_1Input__coll__graph.md5
doxydoc/html/d1/d60/: classaction_1_1Low.html  help_8hpp.html  help_8hpp_source.html
doxydoc/html/d1/d6b/: classaction_1_1UnknownArgument.html
doxydoc/html/d1/d86/: urgent_8hpp__dep__incl.map  urgent_8hpp__dep__incl.md5
doxydoc/html/d2/d5b/: classaction_1_1View-members.html
doxydoc/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  (+20 more)
doxydoc/latex/: annotated.tex  dir_51e5b56c5a94789e05e3a3352a90e377.tex  dir_63a79716ac36ae14e4cbc21f08c9941e.tex  dir_63a79716ac36ae14e4cbc21f08c9941e_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_7b46c1221ca7d8983df05fc1cfa312fe.tex  dir_b7878ad5ecbf2506f4125b9d34c97e45.tex  files.tex  hierarchy.tex  namespaces.tex  refman.tex
src/: AddFunction.cpp  AddFunction.hpp  HelpFunction.cpp  HelpFunction.hpp  InputParser.cpp  InputParser.h  InputParser.hpp  TodoFiles.cpp  TodoFiles.hpp  TodoFunction.cpp  TodoFunction.h  TodoFunction.hpp  TodoFunctionAbstract.cpp  TodoFunctionAbstract.hpp  ViewFunction.cpp  ViewFunction.hpp  main.cpp
src/action/: CMakeLists.txt  action_abstract.cpp  action_abstract.hpp  add.cpp  add.hpp  add_abstract.cpp  add_abstract.hpp  add_complete_abstract.cpp  add_complete_abstract.hpp  add_outstanding_abstract.cpp  add_outstanding_abstract.hpp  archive.cpp  archive.hpp  complete.cpp  complete.hpp  config.cpp  config.hpp  done.cpp  done.hpp  edit.cpp  edit.hpp  file.cpp  file.hpp  help.cpp  help.hpp  high.cpp  high.hpp  low.cpp  low.hpp  reject.cpp  reject.hpp  remove.cpp  remove.hpp  search.cpp  search.hpp  undo.cpp  undo.hpp  unknown_argument.cpp  unknown_argument.hpp  urgent.cpp  (+5 more)
src/config/: CMakeLists.txt  config.cpp  config.hpp  json.hpp  key.hpp  version.cpp  version.hpp  version.hpp.in
src/env/: todofiles.cpp  todofiles.hpp
src/error/: CMakeLists.txt  duplicate_task.cpp  duplicate_task.hpp  empty_argument.cpp  empty_argument.hpp  incompatible_options.cpp  incompatible_options.hpp  inspecific_task.cpp  inspecific_task.hpp  invalid_config.hpp  unknown_argument.cpp  unknown_argument.hpp  unknown_option.cpp  unknown_option.hpp  unknown_task.cpp  unknown_task.hpp
src/file/: CMakeLists.txt  accessors.cpp  accessors.hpp  config.cpp  config.hpp  data_abstract.cpp  data_abstract.hpp  definitions.cpp  definitions.hpp  file.hpp  file_abstract.cpp  file_abstract.hpp  mutators.cpp  mutators.hpp  tasks_data.cpp  tasks_data.hpp
src/input/: CMakeLists.txt  input.cpp  input.hpp  option.hpp  option_type.hpp
src/task/: CMakeLists.txt  complete_abstract.cpp  complete_abstract.hpp  done.cpp  done.hpp  high.cpp  high.hpp  low.cpp  low.hpp  metadata.cpp  metadata.hpp  normal.cpp  normal.hpp  outstanding_abstract.cpp  outstanding_abstract.hpp  prefix.cpp  prefix.hpp  rejected.cpp  rejected.hpp  task.cpp  task.hpp  task_type_abstract.cpp  task_type_abstract.hpp  type.hpp  urgent.cpp  urgent.hpp
src/todo/: CMakeLists.txt  empty_argument.cpp  empty_argument.hpp  files.cpp  files.hpp  inspecific_task.cpp  inspecific_task.hpp  unknown_argument.cpp  unknown_argument.hpp  unknown_task.cpp  unknown_task.hpp
src/util/: CMakeLists.txt  ansi.hpp  display.cpp  display.hpp  env.cpp  env.hpp  file.cpp  file.hpp  fs.cpp  fs.hpp  input.cpp  input.hpp  inputparser.cpp  inputparser.hpp  string.cpp  string.hpp  version.hpp.in  xdg.cpp  xdg.hpp
test/: CMakeLists.txt
test/input/: CMakeLists.txt  input.cpp  option.cpp  option_type.cpp
test/task/: CMakeLists.txt  task.cpp  type.cpp
test/util/: CMakeLists.txt  input.cpp  string.cpp
(+343 files in other folders)
